# online-cinema-fastapi

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  sql_app.db
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: celery.py  config.py  database.py  security.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
app/services/: __init__.py
app/tasks/: user.py
app/tests/: test_auth.py
