[tool.poetry]
name = "online-cinema-fastapi"
version = "0.1.0"
description = "Online Cinema API with FastAPI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
email-validator = "^2.0.0"
python-multipart = "^0.0.6"
celery = "^5.3.4"
redis = "^5.0.0"
aiohttp = "^3.9.0"
pydantic-settings = "^2.2.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
